308/ Reworked Aglet.
309/ Reworked Climbing Claws.
310/ Reworked Lava Charm.
311/ Changed Token of Greed along with GreedPrivilage perk.
312/ Changed Blind Pride perk.
313/ Fixed Stimulation perk not working.
314/ Slightly buffed some perk.
315/ Various adjustment to augmentation and organize.
316/ Added in fail safe for localization text getter in ModUtils.
317/ Made augmentation UI easier to understand.
318/ More work on Lootbox.
319/ Reworked Ashwood sword, Pearlwood sword.
320/ Deleted the audio that play when player used Cursed doll because that deafen player.
321/ Tooltip fixed for cobalt sword.
322/ Reworked Warrior, Ranger and Soccerer Emblem.
323/ Reworked User info function.
324/ Added 2 new relic templates.
325/ Massively reworked relic creative UI.
326/ Some polishing on synergy weapon.
327/ Removed synergy status of Overgrown Minishark, Rectangle shotgun.
328/ Improved World generation by adding more abandon structure.
329/ Added some small explanation in code.
330/ Improved Roguelike_TextBox.
331/ Reworked pre HM ore broadsword.
332/ Improved melee swing visual
333/ Reworked StylistScissor.
334/ Reworked Meteor Armor.
335/ Deleted bunch of no hit placeholder.
336/ Slightly buff invisible potion.
337/ Added Many First Strike perk.
338/ Added sprite for Token of Wrath.
339/ Deleted unused shop NPC.
340/ Added small randomize village zone ( mainly for lootint ) gen task.
341/ Reworked AshwoodSword enchantment.
342/ Reworked Musket, Handgun, RedRyder, The Undertaker and FlintlockPistol enchantment.
343/ Slightly reorganized enchantment.
344/ Forgot to wrote but changed build number to 0.0.16.1
345/ Reworked Wooden Sword.
346/ Massively reworked Blood Star, also renamed the weapon to Bloody Stella
347/ Bloody Stella is now a synergy weapon.
348/ Added Draining Veil Blade synergy weapon.
349/ Reworked Heart Pistol, slightly changed Shattered Sky.
350/ Reworked Pulse Rifle synergy bonus.
351/ Some localization works.
352/ Fixed synergy switch check.